--- a/.github/linters/.eslintrc.json
+++ b/.github/linters/.eslintrc.json
@@ -18,8 +18,8 @@
     "func-names": 0,
     "no-param-reassign": 0,
     "no-multi-str": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "no-console": ["error", { "allow": ["tron"] }],
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "no-console": ["warn", { "allow": ["tron"] }],
     "consistent-return": 0
   }
 }
