--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "herbs2pg",
+  "name": "herbs2knex",
   "version": "1.0.6",
   "description": "Domain entities javascript library.",
-  "main": "./src/herbs2pg.js",
+  "main": "./src/herbs2knex.js",
   "scripts": {
-    "test": "mocha --timeout 999999 --colors --recursive ./test"
+    "test": "mocha --timeout 999999 --colors --recursive ./test",
+    "testdb": "mocha --timeout 999999 --colors --recursive ./testdb"
   },
   "directories": {
     "lib": "src",
@@ -13,10 +14,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/herbsjs/herbs2pg.git"
+    "url": "https://github.com/herbsjs/herbs2knex.git"
   },
   "bugs": {
-    "url": "https://github.com/herbsjs/herbs2pg/issues/"
+    "url": "https://github.com/herbsjs/herbs2knex/issues/"
   },
   "engines": {
     "node": ">= 12.3.0"
@@ -28,9 +29,9 @@
     "DDD",
     "clean architecture"
   ],
-  "author": "David Lojudice Sb",
+  "author": "Enderson Costa",
   "license": "MIT",
-  "homepage": "https://github.com/herbsjs/herbs2pg#readme",
+  "homepage": "https://github.com/herbsjs/herbs2knex#readme",
   "dependencies": {
     "gotu": "^1.0.6",
     "knex": "^0.21.6"
