--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "herbs2knex",
+  "name": "gotu2knex",
   "version": "1.0.6",
   "description": "Domain entities javascript library.",
-  "main": "./src/herbs2knex.js",
+  "main": "./src/gotu2knex.js",
   "scripts": {
     "test": "mocha --timeout 999999 --colors --recursive ./test",
     "testdb": "mocha --timeout 999999 --colors --recursive ./testdb"
@@ -14,10 +14,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/herbsjs/herbs2knex.git"
+    "url": "https://github.com/herbsjs/gotu2knex.git"
   },
   "bugs": {
-    "url": "https://github.com/herbsjs/herbs2knex/issues/"
+    "url": "https://github.com/herbsjs/gotu2knex/issues/"
   },
   "engines": {
     "node": ">= 12.3.0"
@@ -31,7 +31,7 @@
   ],
   "author": "Enderson Costa",
   "license": "MIT",
-  "homepage": "https://github.com/herbsjs/herbs2knex#readme",
+  "homepage": "https://github.com/herbsjs/gotu2knex#readme",
   "dependencies": {
     "gotu": "^1.0.6",
     "knex": "^0.21.6"
