add mssql tests and upgrade dependencies

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
                 "999999",
                 "--colors",
                 "--recursive",
-                "${workspaceFolder}/testdb"
+                "${workspaceFolder}/testdb/mssql"
             ],
             "internalConsoleOptions": "openOnSessionStart",
             "skipFiles": [
