Including limit to findAll method

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "license": "MIT",
   "homepage": "https://github.com/herbsjs/herbs2knex#readme",
   "dependencies": {
-    "gotu": "^1.0.x"
+    "gotu": "^1.0.x",
+    "knex": "^0.95.4"
   },
   "peerDependencies": {
     "gotu": "^1.0.x",
