--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "herbs2knex",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Domain entities javascript library.",
   "main": "./src/herbs2knex.js",
   "scripts": {
@@ -34,29 +34,26 @@
   "license": "MIT",
   "homepage": "https://github.com/herbsjs/herbs2knex#readme",
   "dependencies": {
-    "gotu": "^1.0.x",
-    "knex": "^0.95.4"
-  },
-  "peerDependencies": {
-    "gotu": "^1.0.x",
-    "knex": "^0.21.x"
+    "gotu": "^1.0.22",
+    "knex": "^0.95.4",
+    "suma": "^1.0.10"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.16.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "mocha": "^8.2.1",
+    "mocha": "^9.0.1",
+    "mssql": "^7.1.3",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
-    "pg": "^8.5.1",
-    "mssql": "^6.3.1",
-    "dotenv": "^8.2.0",
-    "tedious": "^11.0.6"
+    "pg": "^8.6.0",
+    "prettier": "^2.3.1",
+    "tedious": "^11.0.9"
   }
 }
