--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "herbs2knex",
-  "version": "1.0.11",
+  "name": "@herbsjs/herbs2knex",
+  "version": "1.0.0",
   "description": "Domain entities javascript library.",
   "main": "./src/herbs2knex.js",
   "scripts": {
     "test": "mocha --timeout 999999 --colors --recursive ./test",
     "testdb-pg": "mocha --timeout 999999 --colors --exit --recursive ./testdb/pg",
-    "testdb-mssql": "mocha --timeout 999999 --colors --exit --recursive ./testdb/mssql"
+    "testdb-mssql": "mocha --timeout 999999 --colors --exit --recursive ./testdb/mssql",
+    "coverage-report": "nyc --reporter=html --reporter=text mocha --recursive ./test --timeout 10000",
+    "coverage": "nyc --reporter=text mocha --recursive ./test --timeout 10000",
+    "semantic-release": "semantic-release",
+    "commit": "cz"
   },
   "directories": {
     "lib": "src",
     "test": "test",
     "example": "examples"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/herbsjs/herbs2knex.git"
   },
   "bugs": {
     "url": "https://github.com/herbsjs/herbs2knex/issues/"
@@ -34,11 +34,19 @@
   "license": "MIT",
   "homepage": "https://github.com/herbsjs/herbs2knex#readme",
   "dependencies": {
-    "gotu": "^1.0.22",
-    "knex": "^0.95.4",
-    "suma": "^1.0.10"
+    "@herbsjs/gotu": "^1.0.0",
+    "knex": "^0.95.6",
+    "@herbsjs/suma": "^1.0.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "semantic-release": "^17.4.4",
     "babel-eslint": "^10.1.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
@@ -55,5 +63,17 @@
     "pg": "^8.6.0",
     "prettier": "^2.3.1",
     "tedious": "^11.0.9"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/herbsjs/herbs2knex.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
