ci: remove eslint action from workflow
remove eslint action and change to eslint file locally

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "coverage-report": "nyc --reporter=html --reporter=text mocha --recursive ./test --timeout 10000",
     "coverage": "nyc --reporter=text mocha --recursive ./test --timeout 10000",
     "semantic-release": "semantic-release",
+    "lint": "npx eslint \"**/*.{js,jsx}\" --quiet",
+    "lint:fix": "npx eslint \"**/*.{js,jsx}\" --fix",
     "commit": "cz"
   },
   "directories": {
