--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
   "homepage": "https://github.com/herbsjs/herbs2knex#readme",
   "dependencies": {
     "@herbsjs/gotu": "^1.0.0",
-    "knex": "^0.95.6",
-    "@herbsjs/suma": "^1.1.0"
+    "@herbsjs/suma": "^1.1.0",
+    "knex": "^0.95.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
@@ -48,15 +50,13 @@
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "semantic-release": "^17.4.4",
-    "babel-eslint": "^10.1.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.29.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.1.0",
     "mocha": "^9.0.1",
@@ -64,6 +64,7 @@
     "nyc": "^15.1.0",
     "pg": "^8.6.0",
     "prettier": "^2.3.1",
+    "semantic-release": "^17.4.4",
     "tedious": "^11.0.9"
   },
   "repository": {
