--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.1.0",
     "mocha": "^9.0.1",
-    "mssql": "^7.2.1",
     "nyc": "^15.1.0",
-    "pg": "^8.7.1",
     "prettier": "^2.3.1",
-    "semantic-release": "^17.4.4",
+    "semantic-release": "^17.4.4"
+  },
+  "peerDependencies": {
+    "pg": "^8.7.1",
+    "mssql": "^7.2.1",
     "tedious": "^13.1.0"
   },
   "repository": {
