test(mysql): add mysql tests
fix #32

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,25 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "DB Tests mysql",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "--timeout",
+                "999999",
+                "--colors",
+                "--recursive",
+                "${workspaceFolder}/testdb/mysql"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "skipFiles": [
+                "${workspaceFolder}/node_modules/**/*.js",
+                "<node_internals>/**/*.js"
+            ]
+        }
+        ,
+        {
+            "type": "node",
+            "request": "launch",
             "name": "DB Tests pg",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "args": [
