--- a/package.json
+++ b/package.json
@@ -63,7 +63,11 @@
     "mocha": "^9.0.1",
     "nyc": "^15.1.0",
     "prettier": "^2.3.1",
-    "semantic-release": "^17.4.4"
+    "semantic-release": "^17.4.4",
+    "pg": "^8.7.1",
+    "tedious": "^13.1.0",
+    "mssql": "^7.2.1",
+    "mysql2": "^2.3.2"
   },
   "peerDependencies": {
     "pg": "^8.7.1",
@@ -77,7 +81,7 @@
     },
     "mssql": {
       "optional": true
-    },    
+    },
     "mysql2": {
       "optional": true
     },
