feat: include integration and unit folders to segregate tests

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Domain entities javascript library.",
   "main": "./src/herbs2knex.js",
   "scripts": {
-    "test": "mocha --timeout 999999 --colors --recursive ./test",
-    "testdb-pg": "mocha --timeout 999999 --colors --exit --recursive ./testdb/pg",
-    "testdb-mssql": "mocha --timeout 999999 --colors --exit --recursive ./testdb/mssql",
-    "testdb-mysql": "mocha --timeout 999999 --colors --exit --recursive ./testdb/mysql",
+    "test": "mocha --timeout 999999 --colors --recursive ./test/unit",
+    "test:integration:pg": "mocha --timeout 999999 --colors --exit --recursive ./test/integration/pg",
+    "test:integration:mssql": "mocha --timeout 999999 --colors --exit --recursive ./test/integration/mssql",
+    "test:integration:mysql": "mocha --timeout 999999 --colors --exit --recursive ./test/integration/mysql",
     "coverage-report": "nyc --reporter=html --reporter=text mocha --recursive ./test --timeout 10000",
     "coverage": "nyc --reporter=text mocha --recursive ./test --timeout 10000",
     "semantic-release": "semantic-release",
@@ -50,9 +50,9 @@
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.3",
+    "bluebird": "^3.7.2",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
-    "bluebird": "^3.7.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -61,14 +61,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^4.1.0",
+    "lodash": "^4.17.21",
     "mocha": "^9.0.1",
+    "mssql": "^7.2.1",
+    "mysql2": "^2.3.2",
     "nyc": "^15.1.0",
+    "pg": "^8.7.1",
     "prettier": "^2.3.1",
     "semantic-release": "^17.4.4",
-    "pg": "^8.7.1",
-    "tedious": "^13.1.0",
-    "mssql": "^7.2.1",
-    "mysql2": "^2.3.2"
+    "tedious": "^13.1.0"
   },
   "peerDependencies": {
     "pg": "^8.7.1",
