--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/herbsjs/herbs2knex/issues/"
   },
   "engines": {
-    "node": ">= 12.3.0"
+    "node": ">= 14.x"
   },
   "keywords": [
     "domain",
@@ -42,34 +42,34 @@
     "knex": "^0.95.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/eslint-parser": "^7.15.8",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.3",
-    "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.3",
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "bluebird": "^3.7.2",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^10.0.0",
-    "eslint": "^8.0.0",
+    "dotenv": "^12.0.3",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^4.1.0",
     "lodash": "^4.17.21",
-    "mocha": "^9.0.1",
-    "mssql": "^7.2.1",
-    "mysql2": "^2.3.2",
+    "mocha": "^9.1.4",
+    "mssql": "^7.3.0",
+    "mysql2": "^2.3.3",
     "nyc": "^15.1.0",
     "pg": "^8.7.1",
-    "prettier": "^2.3.1",
-    "semantic-release": "^17.4.4",
-    "tedious": "^13.1.0"
+    "prettier": "^2.5.1",
+    "semantic-release": "^18.0.1",
+    "tedious": "^14.0.0"
   },
   "peerDependencies": {
     "pg": "^8.7.1",
