--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/eslint-parser": "^7.18.2",
+    "@herbsjs/herbs": "^1.6.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
@@ -61,23 +62,20 @@
     "mssql": "^8.1.2",
     "mysql2": "^2.3.3",
     "nyc": "^15.1.0",
-    "sqlite3": "^5.0.8",
     "pg": "^8.7.3",
-    "@herbsjs/gotu": "^1.1.3",
-    "@herbsjs/suma": "^1.3.1",
     "prettier": "^2.7.1",
     "semantic-release": "^19.0.3",
+    "sqlite3": "^5.0.8",
     "tedious": "^14.6.0"
   },
   "peerDependencies": {
-    "pg": "^8.7.3",
-    "@herbsjs/gotu": "^1.1.3",
-    "@herbsjs/suma": "^1.3.1",
-    "mssql": "^8.1.2",
-    "tedious": "^14.6.0",
-    "mysql2": "^2.3.2",
+    "@herbsjs/herbs": "^1.6.1",
     "bluebird": "^3.7.2",
-    "sqlite3": "^5.0.8"
+    "mssql": "^8.1.2",
+    "mysql2": "^2.3.2",
+    "pg": "^8.7.3",
+    "sqlite3": "^5.0.8",
+    "tedious": "^14.6.0"
   },
   "peerDependenciesMeta": {
     "@herbsjs/herbs": {
