--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,18 +1,5 @@
 {
-  "branches": [
-    "+([0-9])?(.{+([0-9]),x}).x",
-    "master",
-    "next",
-    "next-major",
-    {
-      "name": "beta",
-      "prerelease": true
-    },
-    {
-      "name": "alpha",
-      "prerelease": true
-    }
-  ],
+  "branches": "master",
   "repositoryUrl": "https://github.com/herbsjs/herbs2knex",
   "debug": "true",
   "plugins": [
